--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <p> Hello World !!!</p>
-    <a> href= "grid_6_align-content.html" >grid 6 </a>
+    <a href= "grid_6_align-content.html">grid 6 </a>
   </body>
 </html>
